// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code  can render 1`] = `
<CodeSnippet
  blocks={
    Array [
      Object {
        "appearance": null,
        "code": "Test content",
      },
    ]
  }
/>
`;

exports[`Code  can render as copyable 1`] = `
<CodeSnippet
  blocks={
    Array [
      Object {
        "appearance": "linuxPrompt",
        "code": "Test content",
      },
    ]
  }
/>
`;

exports[`Code  can render inline 1`] = `
<code>
  Test content
</code>
`;

exports[`Code  can render with line numbers 1`] = `
<CodeSnippet
  blocks={
    Array [
      Object {
        "appearance": "numbered",
        "code": "Test content",
      },
    ]
  }
/>
`;
